# Zetesis

./: $null)  .gitignore  FRONTEND_QUICKSTART.md  README.md  README_summary.txt  SETUP.md  package-lock.json  package.json  party_game_ideas.txt  pyproject.toml  test_app.py  test_cli.py  test_hook.py  test_reasoning.py  test_risk.py  test_store.py  test_summarizer.py
flight_recorder/: agent-test.txt  agent.py  cli.py  hook.py  limits.py  monkey.txt  notifier.py  reasoning.py  recorder.py  risk.py  risk_rules.yaml  schema.sql  store.py  summarizer.py  tools.py
flight_recorder/viewer/: app.py
flight_recorder/viewer/static/: index.html
services/daemon/: README.md
services/store/: README.md  requirements.txt
tests/: test_capture.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  index.css
viewer/src/components/: DetailDrawer.tsx  EmptyState.tsx  EventGroupRow.tsx  EventRow.tsx  FilterPanel.tsx  Pagination.tsx  ProviderIcon.tsx  RecIndicator.tsx  RecordingToggle.tsx  RiskBadge.tsx  SearchBar.tsx  SessionSidebar.tsx  SessionStatsBar.tsx  SessionSummary.tsx  Skeleton.tsx  Timeline.tsx  Tooltip.tsx  TopBar.tsx
viewer/src/hooks/: useEventStream.ts  useKeyboardNav.ts
viewer/src/lib/: agents.ts  api.test.ts  api.ts  dataSource.ts  format.test.ts  format.ts  groupEvents.ts  mockData.ts  search.ts
viewer/src/types/: index.ts
zetesis/: agent.py  cli.py  gitstate.py  hook.py  reasoning.py  risk.py  schema.sql  store.py
zetesis/viewer/: app.py
