[project]
name = "flight-recorder"
version = "0.1.0"
description = "A local, real-time black box for Codex sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
# Local session summaries. Wheels: pip install llama-cpp-python
#   --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cpu
llm = ["llama-cpp-python>=0.3"]

[project.scripts]
fr = "flight_recorder.cli:main"
fr-hook = "flight_recorder.hook:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flight_recorder*"]
