[project]
name = "flight-recorder"
version = "0.1.0"
description = "A local, real-time black box for Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
fr = "flight_recorder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["flight_recorder*"]

[tool.setuptools.package-data]
flight_recorder = ["*.txt", "*.sql", "*.yaml"]
