[project]
name = "zetesis"
version = "0.1.0"
description = "A local, real-time black box for Codex sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyyaml>=6.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
fr = "zetesis.cli:main"
fr-hook = "zetesis.hook:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zetesis*"]

[tool.setuptools.package-data]
zetesis = ["*.txt", "*.sql", "*.yaml"]
